rust/crates/rax/src/string/rules/snapshots/rax__string__rules__until_n_in_char_set__tests__keep_left.snap
---
source: crates/rax/src/string/rules/until_n_in_char_set.rs
expression: result
---
Ok(
    (
        "a1b2",
        "c3",
    ),
)
