rust/crates/rax/src/string/rules/snapshots/rax__string__rules__until_n_in_char_set__tests__not_enough_matches.snap
---
source: crates/rax/src/string/rules/until_n_in_char_set.rs
expression: result
---
Err(
    "fewer than N matches found",
)
